--- a/src/Style.css
+++ b/src/Style.css
@@ -318,7 +318,25 @@ small{
     font-family: 'Lexend', sans-serif;
     line-height: 34px;
 }
+.ferramentasageis img{
+    max-width: 271px;
+}
 
+@media all and (max-width: 1500px){
+    .celular, .email, .contratacao{
+        font-size: 16px;
+    }
+    .footer .frase{
+        font-size: 24px;
+        width: 750px;
+        margin-left: 30%;
+    }
+}
+@media all and (max-width: 1150px){
+    .footer .frase{
+        margin-left: 10%;
+    } 
+}
 @media all and (max-width: 960px){
     .title{
         height: 500px;
@@ -462,7 +480,24 @@ small{
     .redesSociaismob a{
         margin-right: 25px;
     }
+    .modal-dialog{
+        max-width: 900px;
+    }
+    .ferramentasageis img{
+        max-width: 271px;
+    }
 
+}
+@media all and (max-width: 400px){
+    .redesSociaismob a{
+        margin-right: 15px;
+    }
+    .modal-dialog{
+        max-width: 350px;
+    }
+    .ferramentasageis img{
+        max-width: 271px;
+    }
 }
 
 
